[gd_scene load_steps=9 format=3 uid="uid://dshnmamoowtqk"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_hauwd"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="1_y5oge"]
[ext_resource type="Script" uid="uid://dek2pbad3ff7s" path="res://addons/CustomControls/Dialogs/remove_text_image.gd" id="2_pcd3h"]
[ext_resource type="Script" uid="uid://d0kowhkcjb7kv" path="res://addons/CustomControls/custom_option_button.gd" id="3_3pkn8"]
[ext_resource type="PackedScene" uid="uid://bj48rsidmna6s" path="res://addons/CustomControls/custom_spin_box.tscn" id="3_ko1h0"]
[ext_resource type="PackedScene" uid="uid://bealtmarqhbfs" path="res://addons/CustomControls/custom_option_button.tscn" id="4_2gpya"]

[sub_resource type="Gradient" id="Gradient_vvvrv"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qmayv"]
gradient = SubResource("Gradient_vvvrv")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[node name="RemoveTextImage" type="Window"]
title = "Remove Image"
size = Vector2i(518, 102)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
min_size = Vector2i(0, 80)
theme = ExtResource("1_hauwd")
script = ExtResource("2_pcd3h")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_qmayv")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Remove Image Type:"

[node name="ImageType" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Select the type of image:

[ul] [Face]: The \"face\" will be removed.
 [Character]: The \"background image/character\" with the given id will be removed.
"
item_count = 2
selected = 0
popup/item_0/text = "Face"
popup/item_0/id = 0
popup/item_1/text = "Background Character Image"
popup/item_1/id = 1
script = ExtResource("3_3pkn8")

[node name="ImageID" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ImageID"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Image ID:"

[node name="ID" parent="MarginContainer/VBoxContainer/ImageID" instance=ExtResource("3_ko1h0")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "ID to identify the background image/character to be erased."
allow_greater = true

[node name="PositionID" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PositionID"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Position:"

[node name="Position" parent="MarginContainer/VBoxContainer/PositionID" instance=ExtResource("4_2gpya")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "Left"
popup/item_0/id = 0
popup/item_1/text = "Right"
popup/item_1/id = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("1_y5oge")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("1_y5oge")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
text = "Cancel"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/ImageType" to="." method="_on_image_type_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/CancelButton" to="." method="_on_cancel_button_pressed"]
